fixed advanced search button alignment

--- a/projectzerostyle.css
+++ b/projectzerostyle.css
@@ -7,7 +7,6 @@ body {
     position: absolute;
     display: flex;
     align-items: flex-end;
-    margin: 5px;
     top: 0px;
     right: 0px; 
 }
@@ -15,6 +14,79 @@ body {
 #top > div {
     padding: 5px;
     font-family: sans-serif;
+}
+
+#logo-advanced {
+    position: absolute;
+    display: flex;
+    align-items: flex-start;
+    margin: 10px;
+    font-family: sans-serif;
+    font-size: 20px;
+}
+
+#appbar {
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+    font-family: sans-serif;
+    color: #FFB3A7;
+    top: 40px;
+    width: 100%;
+    font-size: 20px;
+    padding: 40px;
+    padding-left: 35px;
+    border-bottom: 1px solid gray;
+}
+
+#advancedform {
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+    font-family: sans-serif;
+    color: white;
+    top: 40px;
+    width: 100%;
+    font-size: 18px;
+    padding: 25px;
+    padding-left: 35px;
+}
+
+#advancedformcontents {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    font-family: sans-serif;
+    font-size: 15px;
+    padding: 25px;
+    padding-left: 35px;
+    width: 100%;
+}
+
+#advancedformcontents > #content {
+    padding-bottom: 10px;
+}
+
+#content {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row;
+    width: 1000px;
+}
+
+#content > div {
+    width: 900px;
+}
+
+#content-textbox{
+    width: 800px;
+}
+
+#advanced-search-button{
+    width: 150px;
+    background-color: #4285F4;
+    color: white;
 }
 
 .links{
